# arion-stream-architecture

./: .dockerignore  .env.example  .gitattributes  .gitignore  README.md  docker-compose.yaml  pyproject.toml
benchmarks/: .env.example  2pc-arion_benchmark.benchmark_data.json  benchmark.py  cluster.py  docker-compose.base.yaml  docker-compose.bench.1ad_1p_1c_1at.yaml  docker-compose.bench.3ad_3p_3c_3at.yaml  docker-compose.bench.5ad_10p_5c_5at.yaml  docker-compose.bench.5ad_15p_5c_5at.yaml  docker-compose.bench.5ad_5p_5c_5at.yaml  docker-compose.mongodb.yaml  generator.py  main.ipynb  mongodb.py  pyproject.toml  stacks.json
benchmarks/actuators/: evaluation_t2_1p_1726882947253.csv  evaluation_t2_2p_1726883274663.csv  evaluation_t2_3p_1726883638581.csv
benchmarks/stream-processors/: evaluation_t1_1p_pA_1726802325921.csv  evaluation_t1_1p_pA_1726882949236.csv  evaluation_t1_1p_pA_1726939159692.csv  evaluation_t1_1p_pA_1726940564959.csv  evaluation_t1_1p_pA_1726940652926.csv  evaluation_t1_1p_pA_1726940951958.csv  evaluation_t1_1p_pA_1726941424328.csv  evaluation_t1_1p_pA_1726942026864.csv  evaluation_t1_1p_pA_1727031976040.csv  evaluation_t1_1p_pA_1727049024895.csv  evaluation_t1_2p_pA_1726802578975.csv  evaluation_t1_2p_pA_1726883276437.csv  evaluation_t1_2p_pB_1726802578975.csv  evaluation_t1_2p_pB_1726883276529.csv  evaluation_t1_3p_pA_1726803698337.csv  evaluation_t1_3p_pA_1726883640652.csv  evaluation_t1_3p_pB_1726803698292.csv  evaluation_t1_3p_pB_1726883640684.csv  evaluation_t1_3p_pC_1726803698383.csv  evaluation_t1_3p_pC_1726883640684.csv
services/actuators/base-js/: Dockerfile  package.json  pnpm-lock.yaml  tsconfig.json
services/broker/: Dockerfile
services/classifiers/base-js/: Dockerfile  eslint.config.js  package.json  (+1 more)
services/clock/: Dockerfile  pyproject.toml
services/storage/: Dockerfile
services/stream-adapter/: Dockerfile  pyproject.toml
services/stream-adapter/src/: main.py
services/stream-adapter/src/helpers/: exceptions.py  logger.py
services/stream-adapter/src/libs/: stream.py
services/stream-processors/base/: Dockerfile  pyproject.toml
services/stream-processors/base/src/: main.py
services/stream-processors/base/src/helpers/: logger.py
services/stream-processors/base/src/libs/: stream.py  vision.py
services/stream-processors/base/src/services/: benchmark.py  broker.py  clock.py  handler.py  stream.py  vision.py
(+13 files in other folders)
