[tool.poetry]
name = "benchmarks"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyterlab = "^4.2.5"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
