[tool.poetry]
name = "stream-processor-base"
version = "0.1.0"
description = ""
authors = ["Luís Clício"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
opencv-python-headless = "^4.10.0.84"
vidgear = "^0.3.3"
pyzmq = "^26.1.1"
imagezmq = "^1.2.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.1"

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
