[project]
name = "base"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imagezmq>=1.2.0",
    "opencv-python-headless>=4.11.0.86",
    "pika>=1.3.2",
    "pymongo>=4.11",
    "pyzmq>=26.2.1",
    "setuptools>=75.8.0",
    "vidgear>=0.3.3",
    "wheel>=0.45.1",
]

[dependency-groups]
dev = [
    "ruff>=0.9.4",
]
